# bola

./: .gitignore  Makefile  README.md  setup.py
.github/workflows/: ci.yml
bola/: mesh.py  packing.py  psd.py  rsa.py  visu.py
bola/src/: CMakeLists.txt  Event.h  RandomSequentialAddition.cpp  Simulation.cpp  Simulation.h  Sphere.h  SubBoxes.cpp  python.cpp
examples/: example.pvsm  grading_curves.py  grading_curves.py.lprof  maximize_particle_distance.py  mesoscale_mesh.py  raw_spheres.py  rsa.py
logo/: bola.py
tests/: test_edmd.py  test_mesh.py  test_psd.py  test_rsa.py
